--- a/assets/css/homepage/overall.css
+++ b/assets/css/homepage/overall.css
@@ -1,6 +1,7 @@
 /* Hide for mobile, show later */
 .sidebar {
-  display: none;
+    padding-top:20px;
+  /*display: none;*/
 }
 
 @media (min-width: 768px){
