--- a/assets/css/homepage/overall.css
+++ b/assets/css/homepage/overall.css
@@ -147,3 +147,56 @@
     padding-bottom:10px;
     background-color:#f5f5f5;
 }
+
+/*Modal for Logout*/
+
+.btnModalStudent{
+    background-color:#700000;
+    color:#f5f5f5;
+}
+
+.btnModalStudent:hover{
+    background-color:#f5f5f5;
+    color:#700000;
+}
+.studentName{
+    color:#700000;
+    font-weight: bold;
+}
+
+.studentNameMain{
+    font-weight: bold;
+}
+
+.userProfile1{
+    font-size: 8em;
+    margin-bottom:20px;
+    color:#700000;
+}
+
+.userProfile2{
+    font-size: 7em;
+    color:#700000;
+}
+
+.managePass{
+    margin-bottom:10px;
+}
+
+.managePassName{
+    font-weight: bold;
+}
+
+.accountProfileIcon{
+    padding-right:5px;
+    color:#700000;
+}
+
+.personInfoLabel{
+    font-weight: bold;
+}
+
+.accountProfileIconLogout{
+    padding-right:10px;
+}
+
